Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49480

Syncqt build warnings/errors in QtMultimedia/5.6

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.0 Beta
    • 5.6.0 Alpha
    • Multimedia
    • None
    • 8aa31a38cb89cae2a4cbd37d973a611512093233

    Description

      QtMultimedia: WARNING: qtmultimedia/src/multimedia/video/qvideoframeconversionhelper_p.h does not have the "We mean it." warning
      
      QtMultimediaQuick_p: ERROR: qtmultimedia/src/qtmultimediaquicktools/qsgvideonode_rgb.h includes private header private/qsgvideonode_p.h
      QtMultimediaQuick_p: ERROR: qtmultimedia/src/qtmultimediaquicktools/qsgvideonode_texture.h includes private header private/qsgvideonode_p.h
      QtMultimediaQuick_p: ERROR: qtmultimedia/src/qtmultimediaquicktools/qsgvideonode_yuv.h includes private header private/qsgvideonode_p.h
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes