Fix some private headers.

- Add missing "We mean it" comment
- Add missing '_p' suffix for QtMultimediaQuick_p headers

Task-number: QTBUG-49480
Change-Id: I1fd4f8b2fdffecebaebaedaf1b78e1da62c08156
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>