src/qtmultimediaquicktools/qtmultimediaquicktools.pro
@@ -9,12 +9,21 @@ DEFINES += QT_BUILD_QTMM_QUICK_LIB
 # Header files must go inside source directory of a module
 # to be installed by syncqt.
 INCLUDEPATH += ../multimedia/qtmultimediaquicktools_headers/
+VPATH += ../multimedia/qtmultimediaquicktools_headers/
 
 PRIVATE_HEADERS += \
-    ../multimedia/qtmultimediaquicktools_headers/qdeclarativevideooutput_p.h \
-    ../multimedia/qtmultimediaquicktools_headers/qdeclarativevideooutput_backend_p.h \
-    ../multimedia/qtmultimediaquicktools_headers/qsgvideonode_p.h \
-    ../multimedia/qtmultimediaquicktools_headers/qtmultimediaquickdefs_p.h
+    qdeclarativevideooutput_p.h \
+    qdeclarativevideooutput_backend_p.h \
+    qsgvideonode_p.h \
+    qtmultimediaquickdefs_p.h
+
+HEADERS += \
+    $$PRIVATE_HEADERS \
+    qdeclarativevideooutput_render_p.h \
+    qdeclarativevideooutput_window_p.h \
+    qsgvideonode_yuv_p.h \
+    qsgvideonode_rgb_p.h \
+    qsgvideonode_texture_p.h
 
 SOURCES += \
     qsgvideonode_p.cpp \
@@ -24,14 +33,6 @@ SOURCES += \
     qsgvideonode_yuv.cpp \
     qsgvideonode_rgb.cpp \
     qsgvideonode_texture.cpp
-
-HEADERS += \
-    $$PRIVATE_HEADERS \
-    qdeclarativevideooutput_render_p.h \
-    qdeclarativevideooutput_window_p.h \
-    qsgvideonode_yuv.h \
-    qsgvideonode_rgb.h \
-    qsgvideonode_texture.h
 
 RESOURCES += \
     qtmultimediaquicktools.qrc
